fixed ugly way of forcing scrollbar

--- a/app/styles/challenges.sass
+++ b/app/styles/challenges.sass
@@ -22,12 +22,12 @@ $issueheight: 200px
   padding: 15px
 
 .overflow-container
- overflow-x: scroll
+ overflow-x: auto
  height: $issueheight + 20px
  width: 100%
 
 .scroll-container
- width: 1000%
+ display: inline-flex
 
 .progress_container
   padding-top: 10px
@@ -39,7 +39,6 @@ $issueheight: 200px
  margin-left: 10px
 
 .issue
-  float: left
   font-size: 16px
   display: inline-block
   border: 1px solid black
